# data-structure

./: .gitignore  CMakeLists.txt  README.md  data-structure.code-workspace
chapter_2/: linkedlist.h
chapter_6/: bithrtree.h  bitree.h  huffmantree.h  predefconst.h  usebitree.c
chapter_7/: algraph.h  mgraph.h  predefconst.h  sqqueue.h  usealgraph.c  usemgraph.c
data/: bitree.txt
include/: array.h  bitree.h  gllist.h  linkedqueue.h  predefconst.h  rlsmatrix.h  sqqueue.h  status.h
include/array/: array.h  gllist.h  rlsmatrix.h  tsmatrix.h
include/chapter1/: status.h
include/chapter2/: clinklist.h  dclinklist.h  dlinklist.h  linklist.h  slinklist.h  sqlist.h
include/chapter3/: linkedqueue.h  linkqueue.h  sqqueue.h  sqstack.h  stack.hpp
include/chapter5/: array.h  gllist.h  rlsmatrix.h  tsmatrix.h
include/chapter6/: bitree.h  huffmantree.h  sqqueue.h  sqstack.h  threadtree.h  usehuffmantree.c
include/chapter6/binarytree/: sqqueue.h  sqstack.h
include/chapter6/bitree/: bitree.h  sqqueue.h  sqstack.h
include/chapter6/bstree/: bstree.h
include/chapter6/threadtree/: threadtree.h
include/chapter7/: algraph.h  graphtype.h  mgraph.h
include/chapter7/algraph/: algraph.h  sqqueue.h
include/chapter7/mgraph/: mgraph.h  sqqueue.h  sqstack.h
include/chapter8/: sort.h
include/chapter_0/: status.h
include/chapter_2/: linkedlist.h  sqlist.h  usesqlist.c
include/chapter_6/: predefconst.h  sqstack.h  usebitree.c
include/chapter_7/: mgraph.h
include/graph/: graphtype.h
include/graph/algraph/: algraph.h  sqqueue.h
include/graph/mgraph/: mgraph.h  sqqueue.h  sqstack.h
include/linearlist/: clinklist.h  dclinklist.h  dlinklist.h  linklist.h  sqlist.h
include/linearlist/linklist/: clinklist.h  dclinklist.h  dlinklist.h  linklist.h
include/linearlist/sqlist/: sqlist.h
include/queue/linkqueue/: linkqueue.h
include/queue/sqqueue/: sqqueue.h
include/sort/: sort.h
include/stack/sqstack/: sqstack.h
include/tree/bitree/: bitree.h  sqqueue.h  sqstack.h
include/tree/bstree/: bstree.h
include/tree/threadtree/: threadtree.h
source/: test.c  testtsmatrix.c  usebitree.c  uselinkedlist.c  usesqqueue.c
src/: CMakeLists.txt  main.c  uselinkedqueue.c  usesqstack.c
src/array/: usearray.c
src/chapter2/: CMakeLists.txt  clinklist.c  dclinklist.c  dlinklist.c  linklist.c  program2.c  slinklist.c  sqlist.c
src/chapter3/: CMakeLists.txt  program3.c  program3.cpp  sqqueue.c  sqstack.c
src/chapter6/: CMakeLists.txt  bitree.c  program6.c  sqqueue.c  sqstack.c  threadtree.c  usebithrtree.c
src/chapter6/bitree/: CMakeLists.txt  bitree.c  sqqueue.c  sqstack.c
src/chapter6/bstree/: CMakeLists.txt  bstree.c
src/chapter6/input/: input1.txt  input2.txt  input3.txt
src/chapter6/threadtree/: CMakeLists.txt  threadtree.c
src/chapter7/: CMakeLists.txt  program7.c  usealgraph.c  usemgraph.c
src/chapter7/algraph/: CMakeLists.txt  algraph.c  sqqueue.c
src/chapter7/mgraph/: CMakeLists.txt  mgraph.c  sqqueue.c  sqstack.c
src/chapter8/: CMakeLists.txt  program8.c  sort.c
src/chapter_2/: CMakeLists.txt  sqlist.c
src/graph/: CMakeLists.txt  program.c
src/graph/algraph/: CMakeLists.txt  algraph.c  sqqueue.c
src/graph/mgraph/: CMakeLists.txt  mgraph.c  sqqueue.c  sqstack.c
src/linearlist/: CMakeLists.txt  clinklist.c  dclinklist.c  dlinklist.c  linklist.c  main.c  program.c  slinklist.c  sqlist.c
src/linearlist/linklist/: CMakelists.txt  clinklist.c  dclinklist.c  dlinklist.c  linklist.c
src/linearlist/sqlist/: CMakelists.txt  sqlist.c
src/queue/: CMakeLists.txt  main.c  program.c
src/queue/linkqueue/: CMakeLists.txt  linkqueue.c
src/queue/sqqueue/: CMakeLists.txt  sqqueue.c
src/sort/: CMakeLists.txt  program.c  sort.c
src/stack/: CMakeLists.txt  main.c  program.c
src/stack/linkstack/: CMakeLists.txt
src/stack/sqstack/: CMakeLists.txt  sqstack.c
src/tree/: CMakeLists.txt  main.c  program.c
src/tree/bitree/: CMakeLists.txt  bitree.c  sqqueue.c  sqstack.c
src/tree/bstree/: CMakeLists.txt  bstree.c
src/tree/threadtree/: CMakeLists.txt  threadtree.c
